--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,12 @@ ja:
   activerecord:
     attributes:
       user:
+        nickname: ニックネーム
+        fast_name: 苗字
+        last_name: お名前
+        fast_name_reading: 苗字(フリガナ)
+        last_name_reading: お名前(フリガナ)
+        birth_date: 生年月日
         confirmation_sent_at: パスワード確認送信時刻
         confirmation_token: パスワード確認用トークン
         confirmed_at: パスワード確認時刻
@@ -10,7 +16,7 @@ ja:
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
         email: Eメール
-        encrypted_password: 暗号化パスワード
+        encrypted_password: パスワード
         failed_attempts: 失敗したログイン試行回数
         last_sign_in_at: 最終ログイン時刻
         last_sign_in_ip: 最終ログインIPアドレス
